--- a/WebServerDataSync/Views/Home/Index.cshtml
+++ b/WebServerDataSync/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     </div>
     <div class="grid-container">
         <p>Received Massage :</p>
-        <p id="receivedMsg">emptson</p>
+        <p id="receivedMsg">---</p>
     </div>
 </div>
 
